--- a/FileStream/template/play.html
+++ b/FileStream/template/play.html
@@ -15,6 +15,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@500;700&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
 
+    <!-- Custom background color -->
+    <style>
+        body {
+            background-color: white;
+        }
+    </style>
 </head>
 
 <body>
